--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
     <head>
         <link href="/static/css/lib/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
         <script src="/static/js/lib/jquery-3.3.1.min.js" type="text/javascript"></script>
     </head>
     <body>
         <div class="container" style="width: 60%">
-            <div class="row">
+            <div>
                 <div style="width: 100%">
-                    <img src="/static/images/docker-flask.png" width="60%" />
-                </div>
-            </div>
-            <div class="row">
-                <div style="width: 100%">
-                    <p>Questa è una versione di prova di Docker Bestia</p>
-                </div>
-                <div class="center-block">
+                    <img src="/static/images/docker-flask.png" width="100%">
+                    <p>
+                            <h4 id="studenti">Studenti</h4>
+                            <ul>
+                                <li>Luca Brena, matricola: 808216</li>
+                                <li>Federico Belotti, matricola: 808708</li>
+                            </ul>
+                            <h4 id="descrizioneprogetto">Descrizione progetto</h4>
+                            <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina</p>
+                    </p>
                     <form method="POST" action="http://0.0.0.0:5454/greetings">
-                        <input name="username" type="text">
-                        <input type="submit">
+                        <div class="input-group">
+                            <input class="form-control col-md-11" type="text" name="username">
+                            <span class="input-group-btn col-md-1">
+                                <button class="btn btn-default" type="submit" placeholder="Username">Send</button>
+                            </span>
+                        </div><!-- /input-group -->
                     </form>
                 </div>
             </div>
