--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -12,19 +12,20 @@
                 <div style="width: 100%">
                     <img src="/static/images/docker-flask.png" width="100%">
                     <p>
-                            <h4 id="studenti">Studenti</h4>
-                            <ul>
-                                <li>Luca Brena, matricola: 808216</li>
-                                <li>Federico Belotti, matricola: 808708</li>
-                            </ul>
-                            <h4 id="descrizioneprogetto">Descrizione progetto</h4>
-                            <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina</p>
+                        <h4 id="studenti">Studenti</h4>
+                        <ul>
+                            <li>Luca Brena, matricola: 808216</li>
+                            <li>Federico Belotti, matricola: 808708</li>
+                        </ul>
+                        <h4 id="descrizioneprogetto">Descrizione progetto</h4>
+                        <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina</p>
+                        <a href="http://0.0.0.0:5454/about.html">About</a>   
                     </p>
                     <form method="POST" action="http://0.0.0.0:5454/greetings">
                         <div class="input-group">
-                            <input class="form-control col-md-11" type="text" name="username">
+                            <input class="form-control col-md-11" type="text" name="username" placeholder="Enter a username">
                             <span class="input-group-btn col-md-1">
-                                <button class="btn btn-default" type="submit" placeholder="Username">Send</button>
+                                <button class="btn btn-default" type="submit">Send</button>
                             </span>
                         </div><!-- /input-group -->
                     </form>
