--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -5,6 +5,13 @@
     <head>
         <link href="/static/css/lib/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
         <script src="/static/js/lib/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script>
+            $(document).ready(function() {
+                $("#delete_all").click(function() {
+                    window.location.href = "http://0.0.0.0/deleteall"
+                });
+            });
+        </script>
     </head>
     <body>
         <div class="container" style="width: 60%">
@@ -17,13 +24,16 @@
                         <li>Federico Belotti, matricola: 808708</li>
                     </ul>
                     <h4 id="descrizioneprogetto">Descrizione progetto</h4>
-                    <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina. <a href="http://0.0.0.0:5454/about.html">Project info</a></p>   
+                    <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina. <a href="http://0.0.0.0/about.html">Project info</a></p>   
                 </p>
-                <form method="POST" action="http://0.0.0.0:5454/greetings">
+                <form method="GET" action="http://0.0.0.0/greetings">
                     <div class="input-group">
-                        <input class="form-control col-md-11" type="text" name="username" placeholder="Enter a username">
+                        <input class="form-control col-md-9" type="text" name="username" placeholder="Enter a username">
                         <span class="input-group-btn col-md-1">
                             <button class="btn btn-default" type="submit">Send</button>
+                        </span>
+                        <span class="input-group-btn col-md-1">
+                            <button id="delete_all" class="btn btn-default" type="button">Delete all</button>
                         </span>
                     </div><!-- /input-group -->
                 </form>
