--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -10,6 +10,9 @@
                 $("#delete_all").click(function() {
                     window.location.href = "http://0.0.0.0/deleteall"
                 });
+                $("#show_all").click(function() {
+                    window.location.href = "http://0.0.0.0/showall"
+                });
             });
         </script>
     </head>
@@ -28,14 +31,13 @@
                 </p>
                 <form method="GET" action="http://0.0.0.0/greetings">
                     <div class="input-group">
-                        <input class="form-control col-md-9" type="text" name="username" placeholder="Enter a username">
-                        <span class="input-group-btn col-md-1">
-                            <button class="btn btn-default" type="submit">Send</button>
-                        </span>
-                        <span class="input-group-btn col-md-1">
-                            <button id="delete_all" class="btn btn-default" type="button">Delete all</button>
-                        </span>
-                    </div><!-- /input-group -->
+                            <input name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon2">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="submit">Send</button>
+                                <button id="delete_all" class="btn btn-outline-secondary" type="button">Delete all</button>
+                                <button id="show_all" class="btn btn-outline-secondary" type="button">Show all</button>
+                            </div>
+                    </div>
                 </form>
             </div>
         </div>
