Project version with Kubernetes [skip-ci]

--- a/nginx/html/about.html
+++ b/nginx/html/about.html
@@ -40,7 +40,7 @@
                     <p>Le richieste del client vengono prese in carico da Nginx che si occupa di reindirizzarle al web server uWSGI o all’API o, se è stato richiesto un contenuto statico, lo fornisce esso stesso.</p>
                     <h4><a id="Note_31"></a>Note</h4>
                     <p>Allo stato attuale il provisioning è gestito da <code>docker-compose</code>. Per diversificare le tecnologie stiamo sviluppando una versione complementare che utilizza Kubernetes.</p>
-                    <a href="http://0.0.0.0">Go back</a>
+                    <a href="/">Go back</a>
                 </p>
             </div>
         </div>
