--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -8,10 +8,10 @@
         <script>
             $(document).ready(function() {
                 $("#delete_all").click(function() {
-                    window.location.href = "http://0.0.0.0/deleteall"
+                    window.location.href = "/deleteall"
                 });
                 $("#show_all").click(function() {
-                    window.location.href = "http://0.0.0.0/showall"
+                    window.location.href = "/showall"
                 });
             });
         </script>
@@ -27,8 +27,8 @@
                         <li>Federico Belotti, matricola: 808708</li>
                     </ul>
                     <h4 id="descrizioneprogetto">Descrizione progetto</h4>
-                    <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina. <a href="http://0.0.0.0/about.html">Project info</a></p>   
-                    <form method="GET" action="http://0.0.0.0/greetings">
+                    <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina. <a href="/about.html">Project info</a></p>   
+                    <form method="GET" action="/greetings">
                         <div class="input-group">
                                 <input name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
