Modified id in max and min counts button

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -13,10 +13,10 @@
                 $("#show_all").click(function() {
                     window.location.href = "/showall"
                 });
-                $("#max-counts").click(function() {
+                $("#max_counts").click(function() {
                     window.location.href = "/counts?type=max"
                 });
-                $("#min-counts").click(function() {
+                $("#min_counts").click(function() {
                     window.location.href = "/counts?type=min"
                 });
             });
