Modified html button

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -39,10 +39,10 @@
                                 <input name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary" type="submit">Send</button>
-                                    <button id="show_all" class="btn btn-outline-secondary" type="button">Show all</button>
-                                    <button id="max_counts" class="btn btn-outline-secondary" type="button">Best users</button>
-                                    <button id="min_counts" class="btn btn-outline-secondary" type="button">Worst users</button>
-                                    <button id="delete_all" class="btn btn-outline-secondary" type="button">Delete all</button>
+                                    <button id="show_all" class="btn btn-outline-secondary" type="button">Show</button>
+                                    <button id="max_counts" class="btn btn-outline-secondary" type="button">Best</button>
+                                    <button id="min_counts" class="btn btn-outline-secondary" type="button">Worst</button>
+                                    <button id="delete_all" class="btn btn-outline-secondary" type="button">Delete</button>
                                 </div>
                         </div>
                     </form>
