Added required field to input username

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -36,7 +36,7 @@
                     <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina. <a href="/about.html">Project info</a></p>   
                     <form method="GET" action="/greetings">
                         <div class="input-group">
-                                <input name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon2">
+                                <input required name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary" type="submit">Send</button>
                                     <button id="show_all" class="btn btn-outline-secondary" type="button">Show</button>
