Trying imagePullPolicy: always if works

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -31,6 +31,8 @@
                     <ul>
                         <li>Luca Brena, matricola: 808216</li>
                         <li>Federico Belotti, matricola: 808708</li>
+                        <li>Luca Brena, matricola: 808216</li>
+                        <li>Federico Belotti, matricola: 808708</li>
                     </ul>
                     <h4 id="descrizioneprogetto">Descrizione progetto</h4>
                     <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina. <a href="/about.html">Project info</a></p>   
