--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -27,13 +27,13 @@
             <div style="width: 100%">
                 <img src="/static/images/docker-flask.png" width="100%">
                 <p>
-                    <h4 id="studenti">Studenti</h4>
+                    <h3 id="studenti">Studenti</h3>
                     <ul>
                         <li>Luca Brena, matricola: 808216</li>
                         <li>Federico Belotti, matricola: 808708</li>
                     </ul>
-                    <h4 id="descrizioneprogetto">Descrizione progetto</h4>
-                    <p>Il progetto consiste in un'applicazione web in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina. <a href="/about.html">Project info</a></p>   
+                    <h3 id="descrizione-progetto">Descrizione progetto</h3>
+                    <p>Il progetto consiste in un'applicazione web distribuita in cui, dato uno username, questa mostra quante volte tale username ha visitato la pagina. Vengono inoltre messe a disposizione delle semplici API per gestire le risorse.</p>    
                     <form method="GET" action="/greetings">
                         <div class="input-group">
                                 <input required name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon2">
