--- a/nginx/html/about.html
+++ b/nginx/html/about.html
@@ -27,7 +27,7 @@
                     <h4 id="struttura-progetto">Struttura progetto</h4>
                     <p align="center">
                         
-                    <img src="/static/images/workflow.jpg" height="10%">
+                    <img src="/static/images/workflow.png" height="10%">
                     </p>
 
                     <p>L'applicazione è ospitata su un cluster Kubernetes in produzione su Google Cloud. Le richieste del client all'indirizzo IP http://35.242.237.255 vengono prese in carico da Ingress, il load balancer predefinito di Kubernetes, che si occupa di esporre i servizi offerti dal cluster al client. L'applicazione è costituita principalmente da quattro diversi componenti:</p>
