--- a/nginx/html/about.html
+++ b/nginx/html/about.html
@@ -30,7 +30,7 @@
                     <img src="/static/images/workflow.png" height="10%">
                     </p>
 
-                    <p>L'applicazione è ospitata su un cluster Kubernetes in produzione su Google Cloud. Le richieste del client all'indirizzo IP http://35.242.237.255 vengono prese in carico da Ingress, il load balancer predefinito di Kubernetes, che si occupa di esporre i servizi offerti dal cluster al client. L'applicazione è costituita principalmente da quattro diversi componenti:</p>
+                    <p>L'applicazione è ospitata su un cluster Kubernetes in produzione su Google Cloud. Le richieste del client all'indirizzo IP <a href="http://prosviso.duckdns.org">http://prosviso.duckdns.org</a> vengono prese in carico da Ingress, il load balancer predefinito di Kubernetes, che si occupa di esporre i servizi offerti dal cluster al client. L'applicazione è costituita principalmente da quattro diversi componenti:</p>
                     <ul>
                     <li>Un proxy reverse NGINX</li>
                     <li>Un web server UWSGI dove è ospitata una applicazione Flask</li>
