--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -31,6 +31,7 @@
                     <ul>
                         <li>Luca Brena, matricola: 808216</li>
                         <li>Federico Belotti, matricola: 808708</li>
+                        <li>Modifica colloquio</li>
                     </ul>
                     <h4 id="descrizione-progetto">Descrizione progetto</h4>
                     <p>
